--- a/virtual_lab/src/main/webapp/partials/feedback-modal.html
+++ b/virtual_lab/src/main/webapp/partials/feedback-modal.html
@@ -6,18 +6,18 @@
 			<button type="button" class="close" data-dismiss="modal"
 				aria-hidden="true">&times;</button>
 			<h3 id="feedbackModalLabel">Feedback</h3>
-			<div id="feedbackContext">Context: {{context()}}</div> <!-- {{currentLocation}} -->
+			<div id="feedbackContext">Context: {{context()}}</div>
 		</div>
 			<div class="modal-body">
 				<div class="control-group">
 					<label class="control-label" for="feedbackRating" id="feedBackRatingLabel" >Rating</label>
 					<div class="controls">
 						<div class="btn-group" data-toggle="buttons-radio" role="radiogroup" aria-labelledby="feedBackRatingLabel feedbackModalLabel">
-							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="1">1</button>
-							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="2">2</button>
-							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="3">3</button>
-							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="4">4</button>
-							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="5">5</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="'ONE'">1</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="'TWO'">2</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="'THREE'">3</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="'FOUR'">4</button>
+							<button type="button" class="btn btn-primary" role="radio" ng-model="rating" btn-radio="'FIVE'">5</button>
 						</div>
 					</div>
 				</div>
