--- a/virtual_lab/src/main/webapp/WEB-INF/views/researchers/update.jspx
+++ b/virtual_lab/src/main/webapp/WEB-INF/views/researchers/update.jspx
@@ -12,5 +12,6 @@
         <field:select field="history" id="c_au_net_huni_model_Researcher_history" itemValue="id" items="${historyitems}" multiple="true" path="/console/historyitems" z="user-managed"/>
         <field:input field="emailAddress" id="c_au_net_huni_model_Researcher_emailAddress" required="true" validationMessageCode="field_invalid_email" validationRegex="^([0-9a-zA-Z]([-.\\w]*[0-9a-zA-Z])*@([0-9a-zA-Z][-\\w]*[0-9a-zA-Z]\\.)+[a-zA-Z]{2,9})$" z="HyZjbfBMBc0deSBrEc6bDb5vbEE="/>
         <field:select field="institution" id="c_au_net_huni_model_Researcher_institution" itemValue="id" items="${institutions}" path="/institutions" required="true" z="ZnFoRJvGeCO2++WZDRjZv1VhRmE="/>
+        <field:datetime dateTimePattern="${researcher_creationdate_date_format}" field="creationDate" id="c_au_net_huni_model_Researcher_creationDate" required="true" z="pfRwH7G6TEAVyG4cWDp75oWMmQw="/>
     </form:update>
 </div>
